--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ quick-xml = "0.28.1"
 
 regex = "1.7.3"
 ron = "0.8.0"
+schemars = "0.8.12"
 serde = { version = "1.0.160", features = ["derive"] }
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.95"
